--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "description": "Demonstration of protecting API gateway endpoints with auth0",
   "license": "MIT",
   "scripts": {
-    "deploy:dev": "sls deploy -v --stage dev"
+    "deploy:dev": "sls deploy -v --stage dev",
+    "trace:auth": " sls logs -f auth -t"
   },
   "dependencies": {
     "jsonwebtoken": "^8.1.0"
